--- a/style.css
+++ b/style.css
@@ -75,3 +75,59 @@ button:hover{
         height: 6vh;
     }
 }
+#quiz-section{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    /* border: 2px solid red; */
+    width: 80vw;
+    height: 80vh;
+    box-shadow: 10px 10px 5px 15px rgb(201, 201, 255);
+    transform: translateY(-5px);
+    backdrop-filter: blur(8px);
+    
+}
+h2{
+   font-size: 3rem;
+}
+.btn2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.option{
+    margin: 0.5rem;
+}
+li{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    justify-content: center;
+    border: 2px solid rgb(180, 167, 167);
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    border-top-right-radius: 50px;
+    width: 38rem;
+    font-size: 2rem;
+    margin: 0.5rem;
+    background-image: linear-gradient(rgb(22, 129, 95), rgb(39, 177, 193) , rgb(24, 113, 112));
+}
+ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.question{
+    margin: 1rem;
+}
+
+.reload-button{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    margin-left: 35rem;
+}
