--- a/style.css
+++ b/style.css
@@ -75,6 +75,15 @@ button:hover{
         height: 6vh;
     }
 }
+
+.timer{
+    position: absolute;
+    top: 1%;
+    left: 40%;
+    z-index: 3;
+    font-size: 2rem;
+    color: rgb(130, 12, 12);
+}
 #quiz-section{
     display: flex;
     flex-wrap: wrap;
@@ -87,6 +96,7 @@ button:hover{
     box-shadow: 10px 10px 5px 15px rgb(201, 201, 255);
     transform: translateY(-5px);
     backdrop-filter: blur(8px);
+    z-index: 1;
     
 }
 h2{
@@ -127,7 +137,19 @@ ul{
 .reload-button{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     text-align: center;
     margin-left: 35rem;
 }
+
+.progress {
+    position: relative;
+    width: 100%;
+    height: 40px;
+    background: transparent;
+    border-radius: 30px;
+    overflow: hidden;
+    margin-bottom: 10px;
+    border: 3px solid #640606;
+  }
