--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     height: 100vh;
-    background-image: url('simple-blue-background-free-vector.jpg');
+    background-image: url('/simple-blue-background-free-vector.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     
@@ -90,7 +90,6 @@ button:hover{
     text-align: center;
     flex-direction: column;
     justify-content: center;
-    /* border: 2px solid red; */
     width: 80vw;
     height: 80vh;
     box-shadow: 10px 10px 5px 15px rgb(201, 201, 255);
@@ -106,6 +105,7 @@ h2{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 .option{
     margin: 0.5rem;
@@ -129,6 +129,8 @@ ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    text-align: center;
+
 }
 .question{
     margin: 1rem;
