--- a/style2.css
+++ b/style2.css
@@ -9,6 +9,7 @@ body {
     background-image: linear-gradient(skyblue, rgb(42, 147, 182), rgb(27, 172, 148));
     height: 100vh;
     width: 100vw;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .information {
