--- a/style2.css
+++ b/style2.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: linear-gradient(skyblue, rgb(42, 147, 182), rgb(27, 172, 148));
+    background-image: url('/Quiz_Website/painting-mountain-lake-with-mountain-background_188544-9126.avif');
     height: 100vh;
     width: 100vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -46,24 +46,30 @@ body {
     font-weight: bolder;
     font-size: 3rem;
     width: 100vw;
+    color: rgb(247, 248, 248);
 }
 
 .btn1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 2rem;
     height: 5vh;
     width: 6vw;
     border-radius: 2rem;
     margin: 2rem 1rem;
+    padding: 1rem 1rem;
     cursor: pointer;
-    background-color: aqua;
-    border: 2px solid aqua;
-    color: black;
+    background-color: rgb(54, 56, 56);
+    border: 2px solid wheat;
+    color: #ffffff;
     font-size: 1rem;
 }
 
 .btn1:hover {
-    background-color: black;
-    color: aqua;
+    background-color: rgb(89, 94, 96);
+    transform: translateY(5px);
+    box-shadow: 0px 2px 3px 6px rgb(120, 126, 129);
 }
 
 @media (max-width:800px) and (min-width:300px) {
@@ -93,75 +99,74 @@ body {
 .instruction {
     display: flex;
     flex-wrap: wrap;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    background-image: url('/simple-blue-background-free-vector.jpg');
+    flex-direction: column;
+    background-image: url('/Quiz_Website/painting-mountain-lake-with-mountain-background_188544-9126.avif');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
     width: 100vw;
     color: white;
-    background-color: antiquewhite;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
-    opacity: 0;
-    pointer-events: none;
-    transition: .3s ease;
+    
 
 }
+
+
 .infoo{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    flex-direction: column;
+    color: rgb(156, 251, 251);
 }
 
-@media (max-width:800px) and (min-width:300px) {
-    .instruction {
-        height: 150vh;
-        width: 133vw;
-    }
+.info{
+    display: flex;
+    flex-wrap: wrap;
+    width: auto;
 
-    .information{
-        height: 100vh;
-    }
-
-
-}
-
-@media (max-width:295px) {
-    .instruction {
-        height: 133vh;
-        width: 133vw;
-    }
-}
-
-.instruction.active {
-    opacity: 1;
-    pointer-events: auto;
 }
 
 .btn-group {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    /* justify-content: center; */
+    /* align-items: center; */
+    justify-content: space-around;
+    /* border: 2px solid red; */
+    width: 60vw;
     margin: 2rem;
+    
 }
 
 .info-btn_exit-btn {
-    margin: 0rem 5rem;
-    padding: 0.8rem 2rem;
-    font-size: 1.2rem;
+    padding: 3px 3px;
+    margin: 2rem 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    height: 5vh;
+    width: 8vw;
     background-color: skyblue;
     border-radius: 0.5rem;
     color: white;
     border: 2px solid white;
     cursor: pointer;
+ 
 }
 
 .info-btn_continue-btn {
-    margin: 8rem 7rem;
-    padding: 0.5rem 1rem;
-    font-size: 1.7rem;
-    text-decoration: none;
+    padding: 3px 3px;
+    margin: 2rem 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    height: 5vh;
+    width: 8vw;
     color: white;
     background-color: skyblue;
     border-radius: 0.5rem;
@@ -182,4 +187,31 @@ body {
     transform: translateY(5px);
     box-shadow: 0px 2px 3px 6px skyblue;
 
+}
+
+@media (max-width:850px) and (min-width:350px)
+{
+    .info-btn_continue-btn{
+        width: 20vw;
+    }
+    .info-btn_exit-btn{
+        width: 22vw;
+    }
+}
+
+@media (max-width:320px)
+{
+    .info-btn_continue-btn{
+        width: 28vw;
+       
+    }
+    .info-btn_exit-btn{
+        width: 16vw;
+        height: 7vh;
+       
+    }
+    .btn-group{
+        justify-content: space-between;
+        width: 70vw;
+    }
 }
