--- a/style2.css
+++ b/style2.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url('/Quiz_Website/painting-mountain-lake-with-mountain-background_188544-9126.avif');
+    background-image: url('painting-mountain-lake-with-mountain-background_188544-9126.avif');
     height: 100vh;
     width: 100vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -100,7 +100,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    background-image: url('/Quiz_Website/painting-mountain-lake-with-mountain-background_188544-9126.avif');
+    background-image: url('painting-mountain-lake-with-mountain-background_188544-9126.avif');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
@@ -110,12 +110,12 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 2rem;
-    
+
 
 }
 
 
-.infoo{
+.infoo {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -125,7 +125,7 @@ body {
     color: rgb(156, 251, 251);
 }
 
-.info{
+.info {
     display: flex;
     flex-wrap: wrap;
     width: auto;
@@ -142,7 +142,7 @@ body {
     /* border: 2px solid red; */
     width: 60vw;
     margin: 2rem;
-    
+
 }
 
 .info-btn_exit-btn {
@@ -157,7 +157,7 @@ body {
     color: white;
     border: 2px solid white;
     cursor: pointer;
- 
+
 }
 
 .info-btn_continue-btn {
@@ -189,28 +189,29 @@ body {
 
 }
 
-@media (max-width:850px) and (min-width:350px)
-{
-    .info-btn_continue-btn{
+@media (max-width:850px) and (min-width:350px) {
+    .info-btn_continue-btn {
         width: 20vw;
     }
-    .info-btn_exit-btn{
+
+    .info-btn_exit-btn {
         width: 22vw;
     }
 }
 
-@media (max-width:320px)
-{
-    .info-btn_continue-btn{
+@media (max-width:320px) {
+    .info-btn_continue-btn {
         width: 28vw;
-       
+
     }
-    .info-btn_exit-btn{
+
+    .info-btn_exit-btn {
         width: 16vw;
         height: 7vh;
-       
+
     }
-    .btn-group{
+
+    .btn-group {
         justify-content: space-between;
         width: 70vw;
     }
