--- a/style2.css
+++ b/style2.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url('/painting-mountain-lake-with-mountain-background_188544-9126.avif');
+    background-image: url('/Winter-Wallpaper.webp');
     height: 100vh;
     width: 100vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -46,7 +46,7 @@ body {
     font-weight: bolder;
     font-size: 3rem;
     width: 100vw;
-    color: rgb(247, 248, 248);
+    color: rgb(29, 128, 128);
 }
 
 .btn1 {
@@ -100,7 +100,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    background-image: url('painting-mountain-lake-with-mountain-background_188544-9126.avif');
+    background-image: url('/Winter-Wallpaper.webp');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
