--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     flex-wrap: wrap;
     flex-direction: column;
     height: 100vh;
-    background-image: url('/Quiz_Website/Winter-Wallpaper.webp');
+    background-image: url('/Winter-Wallpaper.webp');
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
