--- a/style.css
+++ b/style.css
@@ -58,7 +58,14 @@ button:hover {
 
 }
 
-@media (max-width:1450px) and (min-width:320px) {
+@media (max-width:1450px)
+{
+    button{
+        width: 12vw;
+        height: 5vh;
+    }
+}
+@media (max-width:1200px) and (min-width:320px) {
     .name {
         font-size: 4rem;
     }
@@ -195,7 +202,7 @@ ul {
 }
 
 
-@media(max-width:1400px) {
+@media(max-width:800px) {
     #quiz-section {
 
         height: auto;
