--- a/style2.css
+++ b/style2.css
@@ -71,8 +71,14 @@ body {
     transform: translateY(5px);
     box-shadow: 0px 2px 3px 6px rgb(120, 126, 129);
 }
-
-@media (max-width:1450px) and (min-width:300px) {
+@media (max-width:1450px)
+{
+    .btn1{
+        width: 12vw;
+        height: 5vh;
+    }
+}
+@media (max-width:800px) and (min-width:300px) {
     .regi {
         font-size: 2rem;
     }
@@ -188,8 +194,14 @@ body {
     box-shadow: 0px 2px 3px 6px skyblue;
 
 }
-
-@media (max-width:1450px) and (min-width:350px) {
+@media (max-width:1450px)
+{
+    button{
+        width: 12vw;
+        height: 5vh;
+    }
+}
+@media (max-width:850px) and (min-width:350px) {
     .info-btn_continue-btn {
         width: 20vw;
     }
