--- a/style.css
+++ b/style.css
@@ -16,11 +16,12 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    height: 100vh;
     background-image: url('/Winter-Wallpaper.webp');
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
+    height: 100vh;
+    
     font-weight: bolder;
     align-items: center;
     justify-content: center;
@@ -58,14 +59,14 @@ button:hover {
 
 }
 
-@media (max-width:1450px)
+@media (max-width:1450px) and (min-width:700px)
 {
     button{
-        width: 12vw;
+        width: 20vw;
         height: 5vh;
     }
 }
-@media (max-width:1200px) and (min-width:320px) {
+@media (max-width:700px) and (min-width:320px) {
     .name {
         font-size: 4rem;
     }
@@ -83,13 +84,13 @@ button:hover {
 
 @media (max-width:295px) {
     .name {
-        font-size: 4rem;
+        font-size: 3rem;
     }
 
-    .container {
+    /* .container {
         height: 116vh;
         width: 116vw;
-    }
+    } */
 
     button {
         width: 30vw;
