--- a/style2.css
+++ b/style2.css
@@ -201,7 +201,7 @@ body {
         height: 5vh;
     }
 }
-@media (max-width:850px) and (min-width:350px) {
+@media (max-width:1000px) and (min-width:350px) {
     .info-btn_continue-btn {
         width: 20vw;
     }
@@ -226,5 +226,6 @@ body {
     .btn-group {
         justify-content: space-between;
         width: 70vw;
+        margin: 0;
     }
 }
